fixed margin on mobile < 360 (#1526)

--- a/src/Pyz/Yves/ShopUi/Theme/default/components/molecules/product-item/product-item.scss
+++ b/src/Pyz/Yves/ShopUi/Theme/default/components/molecules/product-item/product-item.scss
@@ -476,7 +476,7 @@
                         }
                     }
                     @include  helper-breakpoint-media-max($xxs-max){
-                        margin-left: rem(-50);
+                        margin-left: 0;
                     }
 
                 }
